# FastReso

./: README.md  TKernel.h  TParticle.h  TParticle_AZYHYDRO.cpp  analysis_FastReso.yaml  run_PCE.cpp  run_eos.cpp  run_fastreso_azyhydro.cpp  submit_FastReso.py
src/: CMakeLists.txt  TFastReso_AZYHYDRO.cpp  TFastReso_THERMINATOR.cpp  TFastReso_formulas.h  TKernel.cpp  TKernel_old.cpp  eos_func.h  run_PCE.cpp  run_fastreso_azyhydro.cpp  run_fastreso_therminator.cpp  run_kernels.cpp  run_kernels_PCE.cpp
